fix: comment broken code and disable wasm and mobile builds

--- a/UI/UnoContoso/UnoContoso.Wasm/UnoContoso.Wasm.csproj
+++ b/UI/UnoContoso/UnoContoso.Wasm/UnoContoso.Wasm.csproj
@@ -41,9 +41,10 @@
     <None Include="wwwroot\web.config" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+	  <PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Prism.Core" Version="8.1.97" />
-    <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
+    <!--<PackageReference Include="Prism.DryIoc" Version="8.1.97" />-->
     <PackageReference Include="Prism.DryIoc.Uno.WinUI" Version="8.1.97" />    
     <PackageReference Include="Prism.Uno.WinUI" Version="8.1.97" />
     <PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls" Version="7.1.100" />
