chore: Fix dependencies

--- a/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Wasm/Demo.Wasm.csproj
+++ b/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Wasm/Demo.Wasm.csproj
@@ -46,15 +46,15 @@
   <ItemGroup>
     <PackageReference Include="Countries.Standard" Version="1.0.0" />
     <PackageReference Include="Microsoft.Graph" Version="4.24.0" />
-    <PackageReference Include="Microsoft.Identity.Client" Version="4.43.0" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.54.1" />
     <PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
     <PackageReference Include="Bogus" Version="34.0.2" />
-    <PackageReference Include="CountryData.Bogus" Version="3.72.0" />
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="CountryData.Bogus" Version="4.1.0" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="4.9.26" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.9.26" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
     <PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.24" />
     <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.24" />
