--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Windows/SkiaSharpTest.Windows.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Windows/SkiaSharpTest.Windows.csproj
@@ -27,7 +27,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.4-preview.84" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
