chore: Canary fixes

--- a/UI/MigratingEffects/UnoEffectsSample/UnoEffectsSample.Skia.Gtk/UnoEffectsSample.Skia.Gtk.csproj
+++ b/UI/MigratingEffects/UnoEffectsSample/UnoEffectsSample.Skia.Gtk/UnoEffectsSample.Skia.Gtk.csproj
@@ -15,8 +15,8 @@
 		<PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.9.26" />
 		<PackageReference Include="Uno.Material.WinUI" Version="2.6.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
-		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
-		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.4-preview.84" />
+		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.4-preview.84" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
 	</ItemGroup>
