--- a/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Skia.Wpf/Authentication.OidcDemo.Skia.Wpf.csproj
+++ b/UI/Authentication.OidcDemo/Authentication.OidcDemo/Authentication.OidcDemo.Skia.Wpf/Authentication.OidcDemo.Skia.Wpf.csproj
@@ -9,12 +9,12 @@
     <PackageReference Include="IdentityModel.OidcClient" Version="5.2.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
-    <PackageReference Include="SkiaSharp" Version="2.88.3" />
-    <PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.3" />
-    <PackageReference Include="SkiaSharp.NativeAssets.macOS" Version="2.88.3" />
-    <PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.3" />
-    <PackageReference Include="SkiaSharp.Views.Desktop.Common" Version="2.88.3" />
-    <PackageReference Include="SkiaSharp.Views.WPF" Version="2.88.3" />
+    <PackageReference Include="SkiaSharp" Version="2.88.4-preview.84" />
+    <PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.4-preview.84" />
+    <PackageReference Include="SkiaSharp.NativeAssets.macOS" Version="2.88.4-preview.84" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.4-preview.84" />
+    <PackageReference Include="SkiaSharp.Views.Desktop.Common" Version="2.88.4-preview.84" />
+    <PackageReference Include="SkiaSharp.Views.WPF" Version="2.88.4-preview.84" />
     <PackageReference Include="Uno.WinUI.Runtime.Skia.Wpf" Version="4.9.26" />
     <PackageReference Include="Uno.WinUI.Skia.Wpf" Version="4.9.26" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
