--- a/UI/PackageResources/PackageResourcesSample/PackageResourcesSample.Skia.Tizen/PackageResourcesSample.Skia.Tizen.csproj
+++ b/UI/PackageResources/PackageResourcesSample/PackageResourcesSample.Skia.Tizen/PackageResourcesSample.Skia.Tizen.csproj
@@ -20,7 +20,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
-    <PackageReference Include="SkiaSharp.Views" Version="2.88.3" />
+    <PackageReference Include="SkiaSharp.Views" Version="2.88.4-preview.84" />
     <PackageReference Include="Uno.UI.Skia.Tizen" Version="4.9.26" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
