--- a/UI/SkottieSample/SkottieSample/SkottieSample.Mobile/SkottieSample.Mobile.csproj
+++ b/UI/SkottieSample/SkottieSample/SkottieSample.Mobile/SkottieSample.Mobile.csproj
@@ -18,8 +18,8 @@
 		<SupportedOSPlatformVersion Condition="'$(TargetFramework)'=='net7.0-macos'">10.14</SupportedOSPlatformVersion>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
-		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.4-preview.84" />
+		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.4-preview.84" />
 		<PackageReference Include="Uno.WinUI" Version="4.9.26" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
