--- a/UI/SkottieSample/SkottieSample/SkottieSample.Wasm/SkottieSample.Wasm.csproj
+++ b/UI/SkottieSample/SkottieSample/SkottieSample.Wasm/SkottieSample.Wasm.csproj
@@ -42,8 +42,8 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.1" />
-		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
-		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.4-preview.84" />
+		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.4-preview.84" />
 		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
 		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.9.26" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
