--- a/UI/SkottieSample/SkottieSample/SkottieSample.Windows/SkottieSample.Windows.csproj
+++ b/UI/SkottieSample/SkottieSample/SkottieSample.Windows/SkottieSample.Windows.csproj
@@ -27,10 +27,10 @@
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
-		<PackageReference Include="SkiaSharp" Version="2.88.3" />
-		<PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.3" />
-		<PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.3" />
-		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp" Version="2.88.4-preview.84" />
+		<PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.4-preview.84" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.4-preview.84" />
+		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.4-preview.84" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 
 		<Manifest Include="$(ApplicationManifest)" />
