--- a/UI/TravelUI/Directory.Packages.props
+++ b/UI/TravelUI/Directory.Packages.props
@@ -4,8 +4,8 @@
     <PackageVersion Include="Microsoft.Windows.Compatibility" Version="7.0.1" />
     <PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
     <PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
-    <PackageVersion Include="SkiaSharp.Skottie" Version="2.88.3" />
-    <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
+    <PackageVersion Include="SkiaSharp.Skottie" Version="2.88.4-preview.84" />
+    <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.4-preview.84" />
     <PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
     <PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
     <PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
