--- a/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Skia.Gtk/UnoGoodReads.Skia.Gtk.csproj
+++ b/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Skia.Gtk/UnoGoodReads.Skia.Gtk.csproj
@@ -20,8 +20,8 @@
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
     <PackageReference Include="Uno.WinUI.Lottie" Version="4.9.26" />
-    <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
-    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+    <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.4-preview.84" />
+    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.4-preview.84" />
 	  <PackageReference Include="Bogus">
 		  <Version>34.0.2</Version>
 	  </PackageReference>
