--- a/reference/Commerce/Commerce/Commerce.Skia.WPF/Commerce.Skia.Wpf.csproj
+++ b/reference/Commerce/Commerce/Commerce.Skia.WPF/Commerce.Skia.Wpf.csproj
@@ -21,8 +21,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
-		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.4-preview.84" />
+		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.4-preview.84" />
 
 		<PackageReference Include="Uno.Resizetizer" Version="1.1.0" />
 		<PackageReference Include="Uno.WinUI.Skia.Wpf" Version="4.9.26" />
