--- a/UI/PackageResources/PackageResourcesSample/PackageResourcesSample.Skia.Wpf/PackageResourcesSample.Skia.Wpf.csproj
+++ b/UI/PackageResources/PackageResourcesSample/PackageResourcesSample.Skia.Wpf/PackageResourcesSample.Skia.Wpf.csproj
@@ -23,8 +23,8 @@
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
     <PackageReference Include="Uno.WinUI.Lottie" Version="4.9.26" />
-    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
-    <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
+    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.4-preview.84" />
+    <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.4-preview.84" />
   </ItemGroup>
   <ItemGroup>
     <UpToDateCheckInput Include="..\PackageResourcesSample.Shared\**\*.xaml" />
