fix: empty pages

--- a/reference/Commerce/Commerce/Commerce/Commerce.csproj
+++ b/reference/Commerce/Commerce/Commerce/Commerce.csproj
@@ -65,7 +65,13 @@
 		<EmbeddedResource Include="appsettings.json" />
 		<EmbeddedResource Include="appsettings.*.json" DependentUpon="appsettings.json" />
 		<UpToDateCheckInput Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
-		
+
+		<None Update="products.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Update="reviews.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>		
 	</ItemGroup>
 	
 	<!-- Workaround to avoid including Uno.Toolkit.UI XBFs in the PRI file -->
