--- a/UI/Benchmark/AppBenchmark/AppBenchmark.Mobile/AppBenchmark.Mobile.csproj
+++ b/UI/Benchmark/AppBenchmark/AppBenchmark.Mobile/AppBenchmark.Mobile.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
 	  <PackageReference Include="Uno.BenchmarkDotNet" Version="0.11.7-develop" />
 	  <PackageReference Include="Uno.BenchmarkDotNet.Annotations" Version="0.11.7-develop" />
+	  <PackageReference Include="Uno.Toolkit.WinUI" Version="3.0.5" />
 	  <PackageReference Include="Uno.WinUI" Version="4.9.26" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
