--- a/UI/Benchmark/AppBenchmark/AppBenchmark.Wasm/AppBenchmark.Wasm.csproj
+++ b/UI/Benchmark/AppBenchmark/AppBenchmark.Wasm/AppBenchmark.Wasm.csproj
@@ -47,6 +47,7 @@
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.1" />
 		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="3.0.5" />
 		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.9.26" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
