--- a/UI/InsertingSeparators/InsertingSeparators.Mobile/InsertingSeparators.Mobile.csproj
+++ b/UI/InsertingSeparators/InsertingSeparators.Mobile/InsertingSeparators.Mobile.csproj
@@ -18,6 +18,7 @@
     <SupportedOSPlatformVersion Condition="'$(TargetFramework)'=='net7.0-macos'">10.14</SupportedOSPlatformVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Uno.Toolkit.WinUI" Version="3.0.5" />
     <PackageReference Include="Uno.WinUI" Version="4.9.26" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
