--- a/UI/LiteDB/LiteDB/src/LiteDBSample.Mobile/LiteDBSample.Mobile.csproj
+++ b/UI/LiteDB/LiteDB/src/LiteDBSample.Mobile/LiteDBSample.Mobile.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+    <PackageReference Include="Uno.Toolkit.WinUI" Version="3.0.5" />
     <PackageReference Include="Uno.WinUI" Version="4.9.26" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
