--- a/UI/LiteDB/LiteDB/src/LiteDBSample.Wasm/LiteDBSample.Wasm.csproj
+++ b/UI/LiteDB/LiteDB/src/LiteDBSample.Wasm/LiteDBSample.Wasm.csproj
@@ -42,7 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />    
-    <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
+    <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />    
+    <PackageReference Include="Uno.Toolkit.WinUI" Version="3.0.5" />
     <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.9.26" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
