--- a/UI/LiteDB/LiteDB/src/LiteDBSample.Windows/LiteDBSample.Windows.csproj
+++ b/UI/LiteDB/LiteDB/src/LiteDBSample.Windows/LiteDBSample.Windows.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net7.0-windows10.0.19041.0</TargetFramework>
@@ -28,6 +28,7 @@
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="3.0.5" />
 		<PackageReference Include="Uno.WinUI" Version="4.9.26" />
 		<PackageReference Include="LiteDB" Version="5.0.17" />
 
