--- a/UI/PackageResources/PackageResourcesSample/PackageResourcesSample.Mobile/PackageResourcesSample.Mobile.csproj
+++ b/UI/PackageResources/PackageResourcesSample/PackageResourcesSample.Mobile/PackageResourcesSample.Mobile.csproj
@@ -14,6 +14,7 @@
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net7.0-macos'">osx-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Uno.Toolkit.WinUI" Version="3.0.5" />
     <PackageReference Include="Uno.WinUI" Version="4.9.26" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
