--- a/UI/PackageResources/PackageResourcesSample/PackageResourcesSample.Skia.Gtk/PackageResourcesSample.Skia.Gtk.csproj
+++ b/UI/PackageResources/PackageResourcesSample/PackageResourcesSample.Skia.Gtk/PackageResourcesSample.Skia.Gtk.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+    <PackageReference Include="Uno.Toolkit.WinUI" Version="3.0.5" />
     <PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.9.26" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.26" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.26" />
