fix: MvuxHowTos apps layout

--- a/UI/MvuxHowTos/MessagingPeopleApp/Directory.Packages.props
+++ b/UI/MvuxHowTos/MessagingPeopleApp/Directory.Packages.props
@@ -15,6 +15,7 @@
     <PackageVersion Include="Uno.Extensions.Reactive.Messaging" Version="2.4.2" />
     <PackageVersion Include="Uno.Extensions.Reactive.WinUI" Version="2.4.2" />
     <PackageVersion Include="Uno.Resizetizer" Version="1.1.2" />
+    <PackageVersion Include="Uno.Toolkit.WinUI" Version="3.0.5" />
     <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.20" />
     <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
     <PackageVersion Include="Uno.Wasm.Bootstrap" Version="7.0.24" />
