--- a/UI/MvuxHowTos/MessagingPeopleApp/MessagingPeopleApp/MessagingPeopleApp.csproj
+++ b/UI/MvuxHowTos/MessagingPeopleApp/MessagingPeopleApp/MessagingPeopleApp.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Uno.Extensions.Reactive.Messaging" />
+		<PackageReference Include="Uno.Toolkit.WinUI" />
 		<PackageReference Include="Uno.WinUI" />
 		<PackageReference Include="Uno.Resizetizer" />
 		<PackageReference Include="Uno.Extensions.Hosting.WinUI" />
