--- a/UI/MvuxHowTos/SelectionPeopleApp/SelectionPeopleApp/SelectionPeopleApp.csproj
+++ b/UI/MvuxHowTos/SelectionPeopleApp/SelectionPeopleApp/SelectionPeopleApp.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="3.0.5" />
 		<PackageReference Include="Uno.WinUI" Version="4.9.26" />
 		<PackageReference Include="Uno.Resizetizer" Version="1.0.2" />
 		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.10" />
