--- a/UI/Benchmark/AppBenchmark/AppBenchmark.Skia.Gtk/AppBenchmark.Skia.Gtk.csproj
+++ b/UI/Benchmark/AppBenchmark/AppBenchmark.Skia.Gtk/AppBenchmark.Skia.Gtk.csproj
@@ -15,7 +15,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+	<PackageReference Include="Uno.Toolkit.WinUI" Version="3.0.5" />
+	<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageReference Include="Uno.BenchmarkDotNet" Version="0.11.7-develop" />
     <PackageReference Include="Uno.BenchmarkDotNet.Annotations" Version="0.11.7-develop" />
     <PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.9.26" />
