chore: Adding syncfusion reference

--- a/UI/MauiEmbedding/SyncFusionApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/SyncFusionApp/Directory.Packages.props
@@ -1,44 +1,56 @@
 <Project ToolsVersion="15.0">
-  <ItemGroup>
-    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
-    <PackageVersion Include="coverlet.collector" Version="6.0.0" />
-    <PackageVersion Include="FluentAssertions" Version="6.11.0" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.7.0" />
-    <PackageVersion Include="NUnit" Version="3.13.3" />
-    <PackageVersion Include="NUnit3TestAdapter" Version="4.5.0" />
-    <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
-    <PackageVersion Include="Uno.Extensions.Configuration" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Hosting" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Hosting.WinUI" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Http" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Http.WinUI" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Http.Refit" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Localization" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Localization.WinUI" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
-    <PackageVersion Include="Uno.Extensions.Logging.Serilog" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Logging.WinUI" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Maui.WinUI" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Navigation" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Navigation.WinUI" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Reactive" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Reactive.WinUI" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Serialization" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Serialization.Http" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Extensions.Serialization.Refit" Version="3.0.0-dev.2180" />
-    <PackageVersion Include="Uno.Material.WinUI" Version="3.0.0-dev.254" />
-    <PackageVersion Include="Uno.Dsp.Tasks" Version="1.1.0" />
-    <PackageVersion Include="Uno.Toolkit.WinUI" Version="4.0.0-dev.27" />
-    <PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="4.0.0-dev.27" />
-    <PackageVersion Include="Uno.Resizetizer" Version="1.2.0-dev.19" />
-    <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-dev.1732" />
-    <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
-    <PackageVersion Include="Uno.WinUI" Version="5.0.0-dev.1732" />
-    <PackageVersion Include="Uno.WinUI.Lottie" Version="5.0.0-dev.1732" />
-    <PackageVersion Include="Uno.WinUI.RemoteControl" Version="5.0.0-dev.1732" />
-    <PackageVersion Include="Uno.UITest.Helpers" Version="1.1.0-dev.70" />
-    <PackageVersion Include="Xamarin.UITest" Version="4.2.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+		<PackageVersion Include="coverlet.collector" Version="6.0.0" />
+		<PackageVersion Include="FluentAssertions" Version="6.11.0" />
+		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.7.0" />
+		<PackageVersion Include="NUnit" Version="3.13.3" />
+		<PackageVersion Include="NUnit3TestAdapter" Version="4.5.0" />
+		<PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageVersion Include="Syncfusion.Maui.Core" version="22.2.9" />
+		<PackageVersion Include="Syncfusion.Maui.Charts" version="22.2.9" />
+		<PackageVersion Include="Syncfusion.Maui.TabView" version="22.2.9" />
+		<PackageVersion Include="Syncfusion.Maui.DataGrid" version="22.2.9" />
+		<PackageVersion Include="Syncfusion.Compression.NET" version="22.2.9" />
+		<PackageVersion Include="Syncfusion.Maui.PdfToImageConverter" version="22.2.9" />
+		<PackageVersion Include="Syncfusion.PDF.NET" version="22.2.9" />
+		<PackageVersion Include="Syncfusion.Maui.PdfViewer" version="22.2.9" />
+		<PackageVersion Include="Syncfusion.Maui.ListView" version="22.2.9" />
+		<PackageVersion Include="Syncfusion.Maui.DataSource" version="22.2.9" />
+		<PackageVersion Include="Syncfusion.Maui.GridCommon" version="22.2.9" />
+		<PackageVersion Include="Syncfusion.Pdf.Imaging.NET" version="22.2.9" />
+		<PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
+		<PackageVersion Include="Uno.Extensions.Configuration" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Hosting" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Hosting.WinUI" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Http" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Http.WinUI" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Http.Refit" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Localization" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Localization.WinUI" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
+		<PackageVersion Include="Uno.Extensions.Logging.Serilog" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Logging.WinUI" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Maui.WinUI" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Navigation" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Navigation.WinUI" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Reactive" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Reactive.WinUI" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Serialization" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Serialization.Http" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Extensions.Serialization.Refit" Version="3.0.0-dev.2180" />
+		<PackageVersion Include="Uno.Material.WinUI" Version="3.0.0-dev.254" />
+		<PackageVersion Include="Uno.Dsp.Tasks" Version="1.1.0" />
+		<PackageVersion Include="Uno.Toolkit.WinUI" Version="4.0.0-dev.27" />
+		<PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="4.0.0-dev.27" />
+		<PackageVersion Include="Uno.Resizetizer" Version="1.2.0-dev.19" />
+		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-dev.1732" />
+		<PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
+		<PackageVersion Include="Uno.WinUI" Version="5.0.0-dev.1732" />
+		<PackageVersion Include="Uno.WinUI.Lottie" Version="5.0.0-dev.1732" />
+		<PackageVersion Include="Uno.WinUI.RemoteControl" Version="5.0.0-dev.1732" />
+		<PackageVersion Include="Uno.UITest.Helpers" Version="1.1.0-dev.70" />
+		<PackageVersion Include="Xamarin.UITest" Version="4.2.0" />
+	</ItemGroup>
 </Project>
