chore: Switch to mvvm

--- a/UI/MauiEmbedding/SyncFusionApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/SyncFusionApp/Directory.Packages.props
@@ -1,5 +1,6 @@
 <Project ToolsVersion="15.0">
 	<ItemGroup>
+		<PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.1" />
 		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageVersion Include="coverlet.collector" Version="6.0.0" />
 		<PackageVersion Include="FluentAssertions" Version="6.11.0" />
@@ -35,8 +36,6 @@
 		<PackageVersion Include="Uno.Extensions.Navigation" Version="3.0.0-dev.2180" />
 		<PackageVersion Include="Uno.Extensions.Navigation.WinUI" Version="3.0.0-dev.2180" />
 		<PackageVersion Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="3.0.0-dev.2180" />
-		<PackageVersion Include="Uno.Extensions.Reactive" Version="3.0.0-dev.2180" />
-		<PackageVersion Include="Uno.Extensions.Reactive.WinUI" Version="3.0.0-dev.2180" />
 		<PackageVersion Include="Uno.Extensions.Serialization" Version="3.0.0-dev.2180" />
 		<PackageVersion Include="Uno.Extensions.Serialization.Http" Version="3.0.0-dev.2180" />
 		<PackageVersion Include="Uno.Extensions.Serialization.Refit" Version="3.0.0-dev.2180" />
