--- a/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp.MauiControls/SyncFusionApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp.MauiControls/SyncFusionApp.MauiControls.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) or '$(EnableWindowsTargeting)' == 'true'">$(TargetFrameworks);net7.0-windows10.0.19041</TargetFrameworks>
