--- a/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp.Mobile/SyncFusionApp.Mobile.csproj
+++ b/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp.Mobile/SyncFusionApp.Mobile.csproj
@@ -8,7 +8,7 @@
 		<ApplicationTitle>SyncFusionApp</ApplicationTitle>
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.syncfusionapp</ApplicationId>
-		<ApplicationIdGuid>82A5607C-9761-4174-94C8-B0BB450EDEE1</ApplicationIdGuid>
+		<ApplicationIdGuid>00FE89CA-F53A-4FE6-B19A-CDB3859442FB</ApplicationIdGuid>
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
@@ -24,6 +24,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Uno.WinUI" />
+		<PackageReference Include="CommunityToolkit.Mvvm" />
 		<PackageReference Include="Uno.Extensions.Configuration" />
 		<PackageReference Include="Uno.Extensions.Http" />
 		<PackageReference Include="Uno.Extensions.Http.Refit" />
@@ -38,7 +39,6 @@
 		<PackageReference Include="Uno.Extensions.Localization.WinUI" />
 		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" />
 		<PackageReference Include="Uno.Extensions.Navigation.WinUI" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
 		<PackageReference Include="Uno.Extensions.Logging.OSLog" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
