--- a/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp.Windows/SyncFusionApp.Windows.csproj
+++ b/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp.Windows/SyncFusionApp.Windows.csproj
@@ -25,6 +25,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Uno.WinUI" />
+		<PackageReference Include="CommunityToolkit.Mvvm" />
 		<PackageReference Include="Uno.Extensions.Configuration" />
 		<PackageReference Include="Uno.Extensions.Http" />
 		<PackageReference Include="Uno.Extensions.Http.Refit" />
@@ -39,7 +40,6 @@
 		<PackageReference Include="Uno.Extensions.Localization.WinUI" />
 		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" />
 		<PackageReference Include="Uno.Extensions.Navigation.WinUI" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
