feat: Adding circular charts

--- a/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp.MauiControls/SyncFusionApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp.MauiControls/SyncFusionApp.MauiControls.csproj
@@ -25,4 +25,40 @@
 		<PackageReference Include="Syncfusion.Pdf.Imaging.NET" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="Samples\CircularChart\Doughnut\CenterElevation.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Samples\CircularChart\Doughnut\DoughnutChart.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Samples\CircularChart\Doughnut\GroupToDoughnutChart.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Samples\CircularChart\Doughnut\SemiDoughnutChart.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Samples\CircularChart\Interaction\Selection.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Samples\CircularChart\Interaction\Tooltip.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Samples\CircularChart\Pie\GroupToPieChart.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Samples\CircularChart\Pie\PieChart.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Samples\CircularChart\Pie\SemiPieChart.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Samples\CircularChart\RadialBar\CustomizedRadialBarChart.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Samples\CircularChart\RadialBar\RadialBarChart.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
