chore: Removing C1 library references and adding instructions/TODO items

--- a/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp.MauiControls/GrapeCityApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp.MauiControls/GrapeCityApp.MauiControls.csproj
@@ -10,8 +10,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="C1.Maui.Grid" />
-		<PackageReference Include="C1.Maui.Calendar" />
+		<!-- TODO: Uncomment the PackageReferences for the C1 Packages -->
+		<!--<PackageReference Include="C1.Maui.Grid" />
+		<PackageReference Include="C1.Maui.Calendar" />-->
 	</ItemGroup>
 
 	<!-- Workaround to avoid including Uno.Toolkit.UI XBFs in the PRI file -->
