feat: Adde Snackbar sample

--- a/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp.MauiControls/MauiCommunityToolkitApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp.MauiControls/MauiCommunityToolkitApp.MauiControls.csproj
@@ -29,6 +29,9 @@
 	  <MauiXaml Update="ExpanderControl.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="SnackbarControl.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ToastControl.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
