--- a/NuGet.config
+++ b/NuGet.config
@@ -2,6 +2,6 @@
 <configuration>
 	<packageSources>
 		<add key="NuGet official package source" value="https://api.nuget.org/v3/index.json" />
-		<!-- <add key="uno dev" value="https://pkgs.dev.azure.com/uno-platform/1dd81cbd-cb35-41de-a570-b0df3571a196/_packaging/unoplatformdev/nuget/v3/index.json" /> -->
+		<add key="uno dev" value="https://pkgs.dev.azure.com/uno-platform/1dd81cbd-cb35-41de-a570-b0df3571a196/_packaging/unoplatformdev/nuget/v3/index.json" />
 	</packageSources>
 </configuration>
