--- a/UI/MauiEmbedding/DevExpressApp/DevExpressApp/DevExpressApp.csproj
+++ b/UI/MauiEmbedding/DevExpressApp/DevExpressApp/DevExpressApp.csproj
@@ -16,6 +16,7 @@
 		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" />
 		<PackageReference Include="Uno.Toolkit.WinUI" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
+		<PackageReference Include="Uno.WinUI.Lottie" />
 	</ItemGroup>
 
 	<Choose>
