--- a/UI/MauiEmbedding/DevExpressApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/DevExpressApp/Directory.Packages.props
@@ -15,5 +15,12 @@
     <PackageVersion Include="Uno.WinUI" Version="4.10.12" />
     <PackageVersion Include="Uno.WinUI.Lottie" Version="4.10.12" />
     <PackageVersion Include="Uno.WinUI.RemoteControl" Version="4.10.12" />
+	  <PackageVersion Include="Uno.Extensions.Configuration" Version="2.5.11" />
+	  <PackageVersion Include="Uno.Extensions.Logging.WinUI" Version="2.5.11" />
+	  <PackageVersion Include="Uno.Extensions.Logging.Serilog" Version="2.5.11" />
+	  <PackageVersion Include="Uno.Extensions.Hosting.WinUI" Version="2.5.11" />
+	  <PackageVersion Include="Uno.Extensions.Localization.WinUI" Version="2.5.11" />
+	  <PackageVersion Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.5.11" />
+	  <PackageVersion Include="Uno.Extensions.Navigation.WinUI" Version="2.5.11" />
   </ItemGroup>
 </Project>
