--- a/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp/SyncFusionApp.csproj
+++ b/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp/SyncFusionApp.csproj
@@ -30,6 +30,7 @@
 		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" />
 		<PackageReference Include="Uno.Extensions.Navigation.WinUI" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
+		<PackageReference Include="Microsoft.Maui.Graphics" VersionOverride="6.0.300" />
 	</ItemGroup>
 
 	<Choose>
