fix: Fix build for maui

--- a/UI/MauiEmbedding/MauiCommunityToolkitApp/Directory.Build.props
+++ b/UI/MauiEmbedding/MauiCommunityToolkitApp/Directory.Build.props
@@ -18,7 +18,7 @@
 
 		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
 
-		<NoWarn>$(NoWarn);CA1416;NU1507</NoWarn>
+		<NoWarn>$(NoWarn);CA1416;NU1507;NETSDK1023</NoWarn>
 
 		<DefaultLanguage>en</DefaultLanguage>
 
