--- a/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp.Mobile/MauiCommunityToolkitApp.Mobile.csproj
+++ b/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp.Mobile/MauiCommunityToolkitApp.Mobile.csproj
@@ -24,6 +24,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Uno.WinUI" />
+
 		<PackageReference Include="CommunityToolkit.Mvvm" />
 		<PackageReference Include="Uno.Extensions.Configuration" />
 		<PackageReference Include="Uno.Extensions.Http" />
@@ -38,12 +39,17 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
 		<PackageReference Include="Uno.Extensions.Logging.OSLog" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Condition="'$(Configuration)'=='Debug'" />
+		<!-- <PackageReference Include="Uno.WinUI.RemoteControl" Condition="'$(Configuration)'=='Debug'" /> -->
 	</ItemGroup>
 	<Choose>
 		<When Condition="$(IsAndroid)">
 			<ItemGroup>
 				<PackageReference Include="Uno.UniversalImageLoader" />
+				<PackageReference Include="Xamarin.Google.Android.Material" VersionOverride="1.9.0.2" />
+				<PackageReference Include="Xamarin.AndroidX.Navigation.UI" VersionOverride="2.6.0.1" />
+				<PackageReference Include="Xamarin.AndroidX.Navigation.Fragment" VersionOverride="2.6.0.1" />
+				<PackageReference Include="Xamarin.AndroidX.Navigation.Runtime" VersionOverride="2.6.0.1" />
+				<PackageReference Include="Xamarin.AndroidX.Navigation.Common" VersionOverride="2.6.0.1" />
 			</ItemGroup>
 			<ItemGroup>
 				<AndroidEnvironment Include="Android/environment.conf" />
