chore: Removing package references to app builds and runs

--- a/UI/MauiEmbedding/DevExpressApp/DevExpressApp.MauiControls/DevExpressApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/DevExpressApp/DevExpressApp.MauiControls/DevExpressApp.MauiControls.csproj
@@ -8,9 +8,10 @@
 		<SingleProject>true</SingleProject>
 	</PropertyGroup>
 
-	<ItemGroup >
+	<!-- TODO: Uncomment -->
+	<!--<ItemGroup >
 	  <PackageReference Include="DevExpress.Maui.Charts" />
 	  <PackageReference Include="DevExpress.Maui.DataGrid" />
-	</ItemGroup>
+	</ItemGroup>-->
 
 </Project>
