--- a/UI/MauiEmbedding/DevExpressApp/DevExpressApp.Mobile/DevExpressApp.Mobile.csproj
+++ b/UI/MauiEmbedding/DevExpressApp/DevExpressApp.Mobile/DevExpressApp.Mobile.csproj
@@ -43,6 +43,12 @@
 		<When Condition="$(IsAndroid)">
 			<ItemGroup>
 				<PackageReference Include="Uno.UniversalImageLoader" />
+
+				<PackageReference Include="Xamarin.Google.Android.Material" VersionOverride="1.9.0.2" />
+				<PackageReference Include="Xamarin.AndroidX.Navigation.UI" VersionOverride="2.6.0.1" />
+				<PackageReference Include="Xamarin.AndroidX.Navigation.Fragment" VersionOverride="2.6.0.1" />
+				<PackageReference Include="Xamarin.AndroidX.Navigation.Runtime" VersionOverride="2.6.0.1" />
+				<PackageReference Include="Xamarin.AndroidX.Navigation.Common" VersionOverride="2.6.0.1" />
 			</ItemGroup>
 			<ItemGroup>
 				<AndroidEnvironment Include="Android/environment.conf" />
