chore: Adding samples

--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,4 @@ msbuild.binlog
 /Uno/Uno.UI.TestComparer/Properties/launchSettings.json
 *.diagsession
 
+/UI/MauiEmbedding/GrialKitApp/nuget.config
