--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/GrialKitApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/GrialKitApp.MauiControls.csproj
@@ -1,12 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) or '$(EnableWindowsTargeting)' == 'true'">$(TargetFrameworks);net7.0-windows10.0.19041</TargetFrameworks>
-		<TargetFrameworks>$(TargetFrameworks);net7.0;net7.0-ios;net7.0-android;net7.0-maccatalyst</TargetFrameworks>
+		<TargetFrameworks>net7.0-ios;net7.0-android</TargetFrameworks>
 		<TargetFrameworks Condition="'$(OverrideTargetFrameworks)'!=''">$(OverrideTargetFrameworks)</TargetFrameworks>
 
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 	</PropertyGroup>
 
+	<ItemGroup Condition=" Exists('GrialLicense') ">
+		<None Remove="GrialLicense" />
+		<EmbeddedResource Include="GrialLicense" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="UXDivers.GrialMaui" />
+	</ItemGroup>
 </Project>
