fix: Correcting sample name

--- a/.gitignore
+++ b/.gitignore
@@ -243,3 +243,4 @@ msbuild.binlog
 *.diagsession
 
 /UI/MauiEmbedding/GrialKitApp/nuget.config
+/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/GrialLicense
