--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.Mobile/GrialKitApp.Mobile.csproj
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.Mobile/GrialKitApp.Mobile.csproj
@@ -5,9 +5,11 @@
 		<SingleProject>true</SingleProject>
 		<OutputType>Exe</OutputType>
 		<!-- Display name -->
-		<ApplicationTitle>GrialKitApp</ApplicationTitle>
+		<ApplicationTitle>GrialControlsTestBed</ApplicationTitle>
+		<ApplicationName>GrialControlsTestBed</ApplicationName>
+		
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.grialkitapp</ApplicationId>
+		<ApplicationId>com.grialcontrolstestbed</ApplicationId>
 		<ApplicationIdGuid>09267992-D99C-4976-B09B-4572DCB585A4</ApplicationIdGuid>
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
