fix: Commenting out Grial library references

--- a/UI/MauiEmbedding/GrialKitApp/Directory.Packages.props
+++ b/UI/MauiEmbedding/GrialKitApp/Directory.Packages.props
@@ -21,6 +21,7 @@
 		<PackageVersion Include="Uno.WinUI.Lottie" Version="4.10.5" />
 		<PackageVersion Include="Uno.WinUI.RemoteControl" Version="4.10.5" />
 
-		<PackageVersion Include="UXDivers.GrialMaui" Version="4.0.92" />
+		<!-- TODO: Uncomment -->
+		<!--<PackageVersion Include="UXDivers.GrialMaui" Version="4.0.92" />-->
 	</ItemGroup>
 </Project>
