--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/GrialKitApp.MauiControls.csproj
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/GrialKitApp.MauiControls.csproj
@@ -14,6 +14,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="UXDivers.GrialMaui" />
+		<!-- TODO: Uncomment -->
+		<!--<PackageReference Include="UXDivers.GrialMaui" />-->
 	</ItemGroup>
 </Project>
